<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/trident_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="39dp"
        android:src="@drawable/trident"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:src="@drawable/icon_account_circle"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/signUpLabel"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="321dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/login_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="282dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="218dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/confirmPassword_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/RememberMe"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/loginbuttonbg"
        android:text="@string/signUpButton"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="55dp"
        android:text="@string/loginLink"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>